--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,14 @@
 
 :root {
   --gray: #353535;
-  --footer-gray: #323232;
   --light-gray: #484842;
-  --blue: #2c4251;
-  --green: #104547;
+  --p-color:  #586270;
+  --footer-gray: #323232;
   --tomato: #ef6351;
-  --red: #d1495b;
-  --indian-red: #eb5160;
-  --background: #fffaf2;
-  --font-Karla: "Karla", sans-serif;
+  --lime-green: #dcf2b0;
+  --background-color: #fffaf2;
   --contact-background: #faf4e8;
+  --font-Karla: "Karla", sans-serif;
 }
 
 * {
@@ -42,10 +40,7 @@ h3 {
   font-weight: 500;
   letter-spacing: -0.7px;
   color: var(--gray);
-  font-family: "Karla", sans-serif;
-}
-
-h4 {
+  font-family: var(--font-Karla);
 }
 
 label,
@@ -55,27 +50,19 @@ textarea {
 }
 
 p {
-  font-size: clamp(0.8rem, 0.6885rem + 0.5096vw, 1.3rem);
+  font-size: clamp(1rem, 0.9331rem + 0.3057vw, 1.3rem);
+  color: var(--p-color);
 }
 
 i {
   font-size: clamp(1.2rem, 1.1108rem + 0.4076vw, 1.6rem);
 }
 
-img {
-  max-width: 100vw;
-}
-
 body {
   min-height: 100vh;
-  background-color: var(--background);
-  /* background-image: url(/resources/background-noise.svg); */
-  background-position: 0px 0px;
-  background-repeat: no-repeat;
-  background-size: auto;
+  background-color: var(--background-color);
+  background-image: url(/resources/background-noise.svg);
   font-family: "Inter", sans-serif;
-  /* background: rgb(255,230,153); */
-  /* background: radial-gradient(circle at 60%, rgba(255,230,153,0.3) 40%, var(--background) 100%); */
 }
 
 li {
@@ -88,7 +75,7 @@ a {
 
 .button {
   background-color: var(--tomato);
-  color: var(--background);
+  color: var(--background-color);
   border: 2px solid var(--tomato);
   cursor: pointer;
   line-height: 2.3;
@@ -126,9 +113,9 @@ section-container {
   display: inline-block;
   padding: 10px 15px 8px;
   border-radius: 80px;
-  background-color: #dcf2b0;
-  font-size: var(--font-xs);
-  line-height: var(--font-xs);
+  background-color: var(--lime-green);
+  font-size: clamp(0.7rem, 0.5885rem + 0.5096vw, 1.2rem);
+  line-height: clamp(0.7rem, 0.5885rem + 0.5096vw, 1.2rem);
   font-weight: bold;
   letter-spacing: 0.2px;
   margin: 20px 0px;
@@ -243,7 +230,7 @@ header {
 }
 
 .resume-link a:hover .fa-arrow-right {
-  background-color: rgba(239, 99, 81, 0.4);
+  background-color: #ef635166;
   transform: rotateZ(0deg);
   transition: 0.5s ease-in-out;
 }
@@ -288,7 +275,7 @@ header {
     width: 100%;
     transform: translateX(100%);
     transition: transform 0.3s ease-in;
-    background-color: var(--background);
+    background-color: var(--background-color);
   }
 
   .resume-link .fa-arrow-right {
@@ -374,7 +361,7 @@ header {
   letter-spacing: -0.5px;
   margin-bottom: 1.3rem;
   margin-top: 1rem;
-  color: #586270;
+  color: var(--p-color);
   margin: 20px 0px 20px;
   max-width: 90%;
 }
@@ -419,10 +406,6 @@ header {
 */
 
 @media (max-width: 800px) {
-  #home-section .text-block,
-  #home-section .image-block {
-    /* flex: 100%; */
-  }
 
   #home-section .flex-component {
     flex-direction: column-reverse;
@@ -446,11 +429,8 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: #d1495b; */
-  /* padding-left: 80px; */
   padding-top: 50px;
   padding-bottom: 50px;
-  /* border: #104547 solid; */
 }
 
 .project-container {
@@ -458,12 +438,7 @@ header {
 }
 
 .project .project-image {
-  /* background-color: #faf4e8; */
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
   cursor: pointer;
-  /* transition: all 0.3s ease; */
 }
 
 .project .project-single .project-image{
@@ -477,20 +452,9 @@ header {
   margin: auto;
 }
 
-
-.project .project-image img {
-  /* padding: 10px 10px; */
-}
-
-.project .project-image:hover {
-  /* transform: scale(0.95); */
-}
-/* background-image: linear-gradient(180deg,rgba(251,244,233,.5),rgba(251,244,233,.5)), url("https://uploads-ssl.webflow.com/60e5bfc7b57e192aea16fad2/626a67c9d84949795c89d86a_bg_pertinens_newsletter_agence.jpg"); */
-
 .project-container .project-name {
   margin-left: 4rem;
   display: block;
-  /* padding: 2rem 20px; */
 }
 
 #projects-section .sub-heading {
@@ -501,6 +465,10 @@ header {
 @media (max-width: 800px) {
   .project {
     flex: 100%;
+  }
+
+  .project .project-gallery img {
+    max-width: 100%;
   }
 }
 
@@ -524,7 +492,6 @@ header {
 #about .text-block {
   flex: 55%;
   background-image: url(/resources/circles.svg);
-  /* background-position: top; */
   background-repeat: no-repeat;
   background-size: contain;
   padding: calc(0.3rem + 1.5625vw);
@@ -539,19 +506,15 @@ header {
   flex: 45%;
   padding: calc(0.3rem + 1.5625vw);
   display: block;
-  text-align: center;
+  /* text-align: center; */
   margin: auto;
-  margin-left: -20px;
-  margin-top: -40px;
+  /* margin-left: -20px; */
+  /* margin-top: -40px; */
+  border: #104547 solid;
 }
 
 #about .image-block img {
   max-width: 98%;
-}
-
-#about svg {
-  margin-left: -320px;
-  margin-top: -80px;
 }
 
 .hello #letters {
@@ -595,6 +558,10 @@ header {
   #about .flex-component img {
     max-width: 80%;
   }
+
+  #about svg {
+    max-width: 50%;
+  }
 }
 
 /* 
@@ -604,7 +571,7 @@ header {
 */
 
 #mid-section {
-  background: linear-gradient(to bottom, var(--background) 50%, #faf4e8 50%);
+  background: linear-gradient(to bottom, var(--background-color) 50%, #faf4e8 50%);
 }
 
 #mid-section svg {
@@ -700,7 +667,7 @@ header {
 }
 
 #contact-section .text-block #contact-icons li i {
-  color: var(--background);
+  color: var(--background-color);
 }
 
 form label {
@@ -779,11 +746,10 @@ footer {
 }
 
 .socials a {
-  color: var(--background);
+  color: var(--background-color);
 }
 
-.socials a > i {
-  /* font-size: 2rem; */
+.socials a i {
   width: 20px;
   transition: color 0.3s ease;
   line-height: 1;
@@ -796,7 +762,7 @@ footer {
 
 footer p {
   text-align: center;
-  color: var(--background);
+  color: var(--background-color);
 }
 
 .back-btn {
@@ -811,7 +777,6 @@ footer p {
   margin: 0 20px 15px 0;
   border-radius: 50%;
   background-color: #38746c;
-  /* background-color: #235250; */
   background-image: url("/resources/chevron-up.svg");
   background-position: 50% 50%;
   background-size: 1.5rem;
@@ -831,8 +796,6 @@ footer p {
 }
 
 #illustration {
-  /* background: hsl(0,0%,90%) url("chrome://global/skin/media/imagedoc-lightnoise.png"); */
-  /* background-color: #d3dece; */
   background-color: var(--contact-background);
   padding-top: 4rem;
 }
@@ -859,12 +822,6 @@ footer p {
     "large-image small-image2";
 }
 
-/* .project-gallery img {
-  max-width:100%;
-  height:auto;
-} */
-
-
 .large-image {
   grid-area: large-image;
   max-width: 100%;
@@ -875,26 +832,17 @@ footer p {
   grid-area: small-image1;
   max-width: 100%;
   margin: auto;
-  /* object-fit: cover;
-  width: 100%;
-  max-height: 100%; */
 }
 
 .small-image2 {
   grid-area: small-image2;
   max-width: 100%;
   margin: auto;
-  /* object-fit: cover;
-  width: 100%;
-  max-height: 100%; */
 }
 
 @media screen and (max-width: 991px) {
   .project-gallery {
     grid-template-columns: 1fr;
-    /* grid-template-areas:
-    "large-image"
-    "small-image1 small-image2"; */
   }
 
   .small-image1,
